<resources>
    <string name="app_name">SpeechApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="DBid">Database Id</string>
    <string name="qes">Question</string>
    <string name="ans">Answer  </string>
    <string name="DB">tgere</string>
    <string name="dbIS">1</string>
    <string name="question">What is your name?</string>
    <string name="anwser">Answer</string>
    <string name="del">Delete</string>
    <string name="update">Update</string>
    <string name="teach">Teach</string>
    <string name="search">Search</string>
</resources>
