<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:clickable="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="5dp">

        <android.support.v7.widget.CardView
            android:id="@+id/queAnsCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:elevation="5dp"
            android:padding="5dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:background="@color/colorPrimaryDark"
                android:id="@+id/dataLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/dbIDTxt"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:padding="5dp"
                    android:text="@string/DB"
                    android:singleLine="true"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/dbTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:padding="5dp"
                    android:text="@string/dbIS"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="15dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/deleteButtonTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/del"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_marginLeft="25dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </RelativeLayout>

</RelativeLayout>